2007-11-03  Bill Clementson  <billclem@gmail.com> 

	* elisp/derl.el (derl-string-make-unibyte,
	derl-recv-challenge-ack): Mods for unicode. Patch supplied by
	Dimitris Dinodimos.

	* elisp/net-fsm.el (fsm-open-socket): Mods for unicode. Patch
	supplied by Dimitris Dinodimos.
	
2007-09-27  Bill Clementson  <billclem@gmail.com>

	* elisp/erl-service.el (erl-complete): Modified Completions buffer
	handling to better conform to standard Emacs completions.
	
2007-09-17  Bill Clementson  <billclem@gmail.com> & Matthias Radestock  

	* src/distel.erl: Changed who-calls xref:q call so that line
	numbers of function calls were returned rather than the line
	number of the start of the calling function.

	* elisp/erl-service.el (erl-find-callers, erl-who-calls-mode,
	erl-goto-caller, erl-propertize-insert): Added derived mode for
	who-calls and functionality to go to call locations.	
	
2007-09-14  Bill Clementson  <billclem@gmail.com> & Matthias Radestock  

	* src/distel.erl: Replaced module and function
	"completions" (M-TAB) logic with calls to xref:q/2 in order to
	improve performance, reuse "who calls" xref code changes, and
	provide support for BIF completions.
	
2007-09-12  Mats Cronqvist  <etxmacr@ws73032>

	* src/distel.erl (src_from_beam/1): couldn't find the source name
	in module_info/1 if the module was interpreted, which caused the
	debugger to fail :<

	the reason for the exit was that filelib:wildcard("") exits. might
	not be a bug, but pretty wierd.

	now, if the module is interpreted, the source file name is
	retrieved from the interpreter (int:file/1)
	
2007-09-03  Bill Clementson  <billclem@gmail.com> 

	* src/distel.erl: Replaced "who calls" (C-c C-d w) logic (all ~250
	lines of it) with a single call to xref:q/2. (Patch from Matthias
	Radestock)

2007-07-20  Mats Cronqvist  <locmacr@mwlx084>

	* src/distel.erl (guess_source_file): added <beamfiledir>../src/*
	to list of directories in which to search for erl files.
	search dirs are now: