@@ -1,3 +1,12 @@
+2008-04-09  Mats Cronqvist  <masse@kreditor.se>
+
+	* src/otp_doc.erl: 
+	* src/distel.erl: 
+	  in the process of adding document browsing to distel.
+	currently, M-x erl-find-doc-under-point will pop a buffer and
+	display the OTP html doc for the function under point.
+	requires 'w3m' and 'w3m-el' to be installed.
+	
 2007-11-03  Bill Clementson  <billclem@gmail.com> 
 
 	* elisp/derl.el (derl-string-make-unibyte,
